test/Fail/Issue4881c.err
Issue4881c.agda:3.3-4: error: [Syntax.DuplicateAnonDeclaration]
Duplicate declaration of _
